--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Bilirubin</title>
-        <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
 		<link rel="stylesheet" href="libs/bootstrap-3.3.5-dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/app.css">
+		<link rel="stylesheet" href="app.css">
+		<script src="libs/xdate.js"></script>
+		<script src="libs/jquery-2.1.4/jquery.min.js"></script>
+		<script src="libs/highcharts/highcharts.js"></script>
+		<script src="libs/highcharts/highcharts-more.js"></script>
+        <script src="libs/fhir-client/fhir-client.js"></script>
 	</head>
 	<body>
 		<header id="patientBanner" class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -31,11 +33,6 @@
 				</div>
 			</div>
 		</div>
-		<script src="libs/jquery-2.1.4/jquery.min.js"></script>
-		<script src="libs/highcharts/highcharts.js"></script>
-		<script src="libs/highcharts/highcharts-more.js"></script>
-        <script src="libs/fhir-client/fhir-client.js"></script>
-        <script src="libs/xdate.js"></script>
-        <script src="js/app.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
