--- a/src/launch.html
+++ b/src/launch.html
@@ -4,7 +4,7 @@
     <script src="libs/fhir-client/fhir-client.js"></script>
     <script>
       FHIR.oauth2.authorize({
-        "client_id": "dbfbb732-91ba-4b0a-9a0b-51c0c1964ed3",
+        "client_id": "my_web_app",
         "scope":  "patient/*.read"
       });
     </script>
